<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.OldBooksStore.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/book" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D7CCC8"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/business_name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description2"
                    android:paddingLeft="16dp"
                    android:src="@drawable/map_marker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="16dp"
                    android:text="@string/Address"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description3"
                    android:paddingLeft="16dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="16dp"
                    android:text="@string/phone_number"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description4"
                    android:paddingLeft="16dp"
                    android:src="@drawable/earth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="16dp"
                    android:text="@string/website"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/about_us"
                android:textSize="20sp" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/description_text" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
